--- a/README.adoc
+++ b/README.adoc
@@ -8,19 +8,18 @@ Thanks to all people who created libraries, tutorials and tools used to create t
 
 Use video from camcoders or hardware encoders. Software encoders can damage time information in video even running on strong hardware.
 
-Usage:
+Usage::
  . Open video file
  . Select desired timestamp cell in table right to the video image.
  . Navigate to time using buttons below video.
  . Continue to next timestamp (Press enter on insert row and use mouse)
-
-Requirements:
+Requirements::
  - Qt 4.8
  - FFmpeg
-
-Compilation:
+Compilation::
  - Linux: qmake or qt creator
  - Windows: I do is using MXE cross compilation environment on linux
-
-Sources:
+Sources::
 https://github.com/jankolorenc/VideoTimeMeasure
+Problem description::
+https://jankolorenc.github.io/2015/05/20/Measuring-time-in-video.html
